added extends for json

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -32,6 +32,7 @@
     "storybook": "^7.5.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "@basal-ui/forms": "*"
+    "@basal-ui/forms": "*",
+    "tsconfig": "*"
   }
 }
