--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -7,7 +7,8 @@
     "dev": "vite build --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "dry-run": "npm pack --dry-run"
+    "dry-run": "npm pack --dry-run",
+    "sym-link": "npm link"
   },
   "dependencies": {
     "react": "^18.2.0",
