--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -24,7 +24,8 @@
     "vite-plugin-dts": "^3.6.3",
     "sass": "^1.69.5"
   },
-  "main": "dist/index.es.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
