--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "@basal-ui/forms": "*",
-    "tsconfig": "*"
+    "tsconfig": "*",
+    "react-hook-form": "^7.48.2"
   }
 }
