new changes for npm publishing

--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite build --watch",
     "build": "tsc && vite build",
+    "prepare": "npm run build",
     "prerelease-alpha": "npm version premajor --preid alpha",
+    "version": "git add -A src",
+    "postversion": "git push && git push --tags",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "dry-run": "npm pack --dry-run",
     "sym-link": "npm link"
